<resources>
    <string name="app_name">OttoPlay</string>



    <!--Waypoint Settings Strings -->
    <!--<string name="gpsCoordinatesLabel">GPS Coordinates</string>
    <string name="latitude"></string>
    <string name="longitude"></string>
    <string name="visibilityLabel">Visibility</string>
        <string name="visibilityPublic">Public</string>
        <string name="visibilityPrivate">Private</string>
        <string name="visibilityHidden">Hidden</string>
    <string name="editingLabel">Editing</string>
        <string name="editingSolo">Solo</string>
        <string name="editingShared">Shared</string>
        <string name="editingWild">Wild</string>
    <string name="playlistsLabel">Playlists</string>
        <string name="playlist1">Playlist 1</string>
        <string name="playlist2">Playlist 2</string>
        <string name="playlist3">Playlist 3</string>
        <string name="playlist4">Playlist 4</string>
    <string name="genreLabel">Genres</string>
        <string name="genreR1C1">Country</string>
        <string name="genreR1C2">Rap</string>
        <string name="genreR1C3">Indie</string>
        <string name="genreR2C1">Pop</string>
        <string name="genreR2C2">Classic</string>
        <string name="genreR2C3">Techno</string>
        <string name="genreR3C1">Jazz</string>
        <string name="genreR3C2">Metal</string>
        <string name="genreR3C3">Other</string>
    <string name="dateCreatedLabel">Creation Date:</string>
        <string name="dateCreated">March 24 2020</string>-->

    <!-- Waypoint Settings Strings  -->
    <string name="waypointName">Waypoint Name</string>
    <string name="gpsCoordinatesLabel">GPS Coordinates</string>
    <string name="latitude"/>
    <string name="longitude"/>
    <string name="visibilityLabel">Visibility</string>
    <string name="visibilityPublic">Public</string>
    <string name="visibilityPrivate">Private</string>
    <string name="visibilityHidden">Hidden</string>
    <string name="editingLabel">Editing</string>
    <string name="editingSolo">Solo</string>
    <string name="editingShared">Shared</string>
    <string name="editingWild">Wild</string>
    <string name="playlistsLabel">Playlists</string>
    <string name="playlist1">Playlist 1</string>
    <string name="playlist2">Playlist 2</string>
    <string name="playlist3">Playlist 3</string>
    <string name="playlist4">Playlist 4</string>
    <string name="playlist5">Playlist 5</string>
    <string name="playlist6">Playlist 6</string>
    <string name="playlist7">Playlist 7</string>
    <string name="playlist8">Playlist 8</string>
    <string name="playlist9">Playlist 9</string>
    <string name="playlist10">Playlist 10</string>
    <string name="playlist11">Playlist 11</string>
    <string name="playlist12">Playlist 12</string>
    <string name="playlist13">Playlist 13</string>
    <string name="playlist14">Playlist 14</string>
    <string name="playlist15">Playlist 15</string>
    <string name="playlist16">Playlist 16</string>
    <string name="playlist17">Playlist 17</string>
    <string name="playlist18">Playlist 18</string>
    <string name="playlist19">Playlist 19</string>
    <string name="playlist20">Playlist 20</string>
    <string name="Addplaylist">Add Playlists</string>
    <string name="genreLabel">Genres</string>
    <string name="genre1">HIPHOP</string>
    <string name="genre2">POP</string>
    <string name="genre3">JAZZ</string>
    <string name="genre4">BLUES</string>
    <string name="genre5">COUNTRY</string>
    <string name="genre6">ROCK</string>
    <string name="genre7">METAL</string>
    <string name="genre8">EDM</string>
    <string name="genre9">Other</string>
    <string name="dateCreatedLabel">Creation Date</string>
    <string name="dateCreated">March 24 2020</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="update_password">Update Password</string>
    <string name="enter_username">Enter Username for your account</string>
    <string name="validate_username">Validate Username</string>

    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">Sign Up Screen</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_password_reset">Password Reset</string>
    <string name="title_activity_update_password">UpdatePassword</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    
</resources>
